# geneva

./: .gitignore  .travis.yml  MANIFEST.in  README.md  engine.py  evaluator.py  evolve.py  pyproject.toml  requirements.txt  setup.py
actions/: strategy.py
censors/: censor.py  censor1.py  censor10.py  censor11.py  censor2.py  censor3.py  censor4.py  censor5.py  censor6.py  censor7.py  censor8.py  censor8b.py  censor9.py  censor_driver.py  dummy.py
examples/: context_manager.py
geneva/: __init__.py  cli.py  engine.py  evaluator.py  evolve.py
geneva/actions/: action.py  drop.py  duplicate.py  fragment.py  sleep.py  sniffer.py  strategy.py  tamper.py  trace.py  tree.py  trigger.py  utils.py
geneva/censors/: censor.py  censor1.py  censor10.py  censor11.py  censor2.py  censor3.py  censor4.py  censor5.py  censor6.py  censor7.py  censor8.py  censor8b.py  censor9.py
geneva/layers/: dns_layer.py  dnsqr_layer.py  ip_layer.py  layer.py  packet.py  raw_layer.py  tcp_layer.py  udp_layer.py
geneva/plugins/: plugin.py  plugin_client.py  plugin_server.py
plugins/: plugin.py  plugin_client.py  plugin_server.py
plugins/amplification/: plugin.py
plugins/discard/: client.py
tests/: common.py  conftest.py  test_censors.py  test_compress.py  test_dns_server.py  test_duplicate.py  test_engine.py  test_evaluator.py  test_evolve.py  test_fragment.py  test_library.py  test_options.py  test_packet.py  test_parse.py  test_plugins.py  test_population_files.py  test_sleep.py  test_strategy.py  test_tamper.py  test_trace.py  test_tree.py  test_trigger.py  test_utils.py
(+57 files in other folders)
